--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,13 @@
             <artifactId>junit-jupiter-engine</artifactId>
             <version>5.10.1</version>
         </dependency>
+
+				<dependency>
+					<groupId>org.jetbrains</groupId>
+					<artifactId>annotations</artifactId>
+					<version>24.0.1</version>
+					<scope>compile</scope>
+				</dependency>
   </dependencies>
 
   <build>
