--- a/pom.xml
+++ b/pom.xml
@@ -1,100 +1,101 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
- 
-    <groupId>TDT4100_project</groupId>
-    <artifactId>tdt4100_v2024_prosjekt_boilerplate</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
- 
-    <name>tdt4100_v2024_prosjekt_boilerplate</name>
-	
+	<modelVersion>4.0.0</modelVersion>
 
-   <dependencies>
+	<groupId>TDT4100_project</groupId>
+	<artifactId>notetaker</artifactId>
+	<version>1.0.0</version>
+	<packaging>jar</packaging>
+	<name>Notetaker</name>
 
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-base</artifactId>
-            <version>23.0.2</version>
-        </dependency>
-        
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-graphics</artifactId>
-            <version>23.0.2</version>
-        </dependency>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-fxml</artifactId>
-            <version>23.0.2</version>
-        </dependency>
+  <dependencies>
+		<dependency>
+				<groupId>org.openjfx</groupId>
+				<artifactId>javafx-base</artifactId>
+				<version>23.0.2</version>
+		</dependency>
+		
+		<dependency>
+				<groupId>org.openjfx</groupId>
+				<artifactId>javafx-graphics</artifactId>
+				<version>23.0.2</version>
+		</dependency>
 
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-controls</artifactId>
-            <version>23.0.2</version>
-        </dependency>
+		<dependency>
+				<groupId>org.openjfx</groupId>
+				<artifactId>javafx-fxml</artifactId>
+				<version>23.0.2</version>
+		</dependency>
 
-        <!-- JUnit 5 -->
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.10.1</version>
-        </dependency>
+		<dependency>
+				<groupId>org.openjfx</groupId>
+				<artifactId>javafx-controls</artifactId>
+				<version>23.0.2</version>
+		</dependency>
 
-				<dependency>
-					<groupId>org.jetbrains</groupId>
-					<artifactId>annotations</artifactId>
-					<version>24.0.1</version>
-					<scope>compile</scope>
-				</dependency>
+		<!-- JUnit 5 -->
+		<dependency>
+				<groupId>org.junit.jupiter</groupId>
+				<artifactId>junit-jupiter-engine</artifactId>
+				<version>5.10.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jetbrains</groupId>
+			<artifactId>annotations</artifactId>
+			<version>24.0.1</version>
+			<scope>compile</scope>
+		</dependency>
   </dependencies>
 
   <build>
-	<plugins>
-	    <plugin>
-		    <artifactId>maven-compiler-plugin</artifactId>
-		    <version>3.12.1</version>
-		    <configuration>
-		        <release>21</release>
-		    </configuration>
-	    </plugin>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.12.1</version>
+				<configuration>
+						<release>21</release>
+				</configuration>
+			</plugin>
 
-	    <plugin>
+			<plugin>
 			<groupId>org.openjfx</groupId>
 			<artifactId>javafx-maven-plugin</artifactId>
 			<version>0.0.8</version>
 			<configuration>
 				<options></options>
-				<mainClass>exampleproject.ExampleProjectApp</mainClass>
+				<mainClass>notetaker/notetaker.App</mainClass>
 				<!-- for jlink -->
 				<compress>2</compress>
 				<noHeaderFiles>true</noHeaderFiles>
 				<stripDebug>true</stripDebug>
 				<noManPages>true</noManPages>
-				<launcher>exampleproject</launcher>
-				<jlinkImageName>exampleproject</jlinkImageName>
-				<jlinkZipName>exampleproject</jlinkZipName>
+				<launcher>notetaker</launcher>
+				<jlinkImageName>notetaker</jlinkImageName>
+				<jlinkZipName>notetaker</jlinkZipName>
 			</configuration>
-	    </plugin>
+			</plugin>
 
-	    <plugin>
-		    <artifactId>maven-surefire-plugin</artifactId>
-		    <version>3.2.5</version>
-		    <configuration>
-			    <argLine>--enable-preview</argLine>
-		    </configuration>
-	    </plugin>
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.2.5</version>
+				<configuration>
+					<argLine>--enable-preview</argLine>
+				</configuration>
+			</plugin>
 
-	    <plugin>
-		    <artifactId>maven-failsafe-plugin</artifactId>
-		    <version>3.2.5</version>
-		    <configuration>
-			    <argLine>--enable-preview</argLine>
-		    </configuration>
-	    </plugin>
-	</plugins>
+			<plugin>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>3.2.5</version>
+				<configuration>
+					<argLine>--enable-preview</argLine>
+				</configuration>
+			</plugin>
+		</plugins>
   </build>
 </project>
