--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
 				<artifactId>junit-jupiter-engine</artifactId>
 				<version>5.10.1</version>
 		</dependency>
+		
 
 		<dependency>
 			<groupId>org.jetbrains</groupId>
@@ -69,7 +70,7 @@
 			<version>0.0.8</version>
 			<configuration>
 				<options></options>
-				<mainClass>notetaker/notetaker.App</mainClass>
+				<mainClass>notetaker.App</mainClass>
 				<!-- for jlink -->
 				<compress>2</compress>
 				<noHeaderFiles>true</noHeaderFiles>
